--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.1.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
